# poe2-item-checker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.codex/: config.toml  explorer.toml  implementer.toml  quick-implementer.toml  reviewer.toml
.github/: pull_request_template.md
.github/rulesets/: main.json
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_profile_hard_checks.py  0003_explicit_empty_equipment.py  0004_evaluation_history.py  0005_custom_builds.py  0006_build_scoped_equipment.py
app/: main.py
app/api/: routes.py
app/buildfit/: config.py  engine.py  schemas.py
app/builds/: __init__.py  provider.py  provider_service.py  registry.py  schemas.py  service.py
app/comparison/: engine.py  schemas.py
app/core/: config.py
app/db/: models.py  session.py
docs/: PROJECT_STATUS.md  example-items.txt  implementation-status.md  poe2-checker-test-items.json  poe2-current-equipment.seed.json  poe2-item-checker-codex-spec.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scripts/: generate_favicons.py
tests/: __init__.py  build_seed.py  test_buildfit.py  test_custom_builds.py  test_evaluation.py  test_facts_check.py  test_health.py  test_history.py  test_line_breaks.py  test_migration_0006.py  test_normalizations.py  test_ocr.py  test_parse_api.py  test_parser.py  test_persistence.py  test_profile_equipment.py  test_schemas.py
(+48 files in other folders)
